fix for timeline overflow! cleaning up mysterious whitespace

--- a/app/css/_timeline.scss
+++ b/app/css/_timeline.scss
@@ -4,14 +4,15 @@
 }
 
 #timeline{
-	display: inline-block;
-	overflow: auto;
 	white-space: nowrap;
+	display: inline-block;
 	.images{
 		clear:both;
+		height: 400px;
 		.image{
 			display: inline-block;
 			border:none;
+			height: 400px;
 			img{
 				border-right: 1px solid white;
 			}
@@ -32,26 +33,29 @@
 	}
 	#events{
 		clear:both;
-		width: 100%;
 		font-family: 'Futura';
 		text-align: center;
+		display: inline-block;
+		float: left;
 
 		$eventWidth: 400px;
 
-		.base-event{
-			width:$eventWidth;
-			float:left;
-		}
-
 		.text{
 			height: 60px;
-			background-color: rgba(0,0,0,.5);
-			line-height: 60px;
+			background-color: rgba(0,0,0,.7);
+			display: inline-block;
+			clear:both;
+			float: left;
+			width: 100%;
+			white-space: nowrap;
+			overflow: auto;
+
 			.event{
-				@extend .base-event;
 				font-size: 24px;
 				color: $light-grey;
 				width: $eventWidth*2;
+				padding-top: 21px;
+				display: inline-block;
 			}
 		}
 		.top{
@@ -62,12 +66,19 @@
 			margin-left: -$eventWidth/2;
 		}
 		#dates{
+			display: inline-block;
+			clear:both;
+			float: left;
+			width: 100%;
+			white-space: nowrap;
+			overflow: auto;
 			height: 60px;
 			font-size: 28px;
 			background-color: rgba(255,255,255,.5);
 			.date{
-				@extend .base-event;
+				width: $eventWidth;
 				padding-top: 17px;
+				display: inline-block;
 			}
 		}
 	}
