--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -1,5 +1,18 @@
 @import '_colors';
 
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+
 html{
 	width: 100%;
 	height: 100%;
@@ -62,8 +75,11 @@ body{
 #wrapper {
 	width: 100%;
 	height: 100%;
+	overflow-x: scroll;
+		overflow-y: hidden;
 	#main-view{
-		overflow: hidden;
+		
+
 	}
 }
 
